--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "react-redux": "^4.0.0",
     "react-router": "^2.3.0",
     "react-svg-inline": "^1.1.0",
+    "react-toastify": "^3.4.3",
     "react-topbar-progress-indicator": "^1.0.0",
     "redux": "^3.0.0",
     "semantic-ui-react": "^0.65.0",
